# HW1_04

./: CMakeLists.txt  README.md
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_build/Testing/Temporary/: CTestCostData.txt
examples/: empty.cpp  init.cpp  pop.cpp  push.cpp
include/: Stack.hpp
sources/: main.cpp
tests/: test.cpp  test_pop.cpp
